syntax = "proto3";

option go_package = "gitlab.jiagouyun.com/cloudcare-tools/datakit/internal/trace";

package trace;

message TraceMeta {
  string protocol = 1;
  string url_path = 2;
  string media = 3;
  string encode = 4;
  bytes buf = 5;
}